--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,11 +1,11 @@
-name: Release
+name: Test
 
 on:
   push:
-    branches-ignore: [dev]
+  pull-request:
 
 jobs:
-  release:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,15 +28,5 @@ jobs:
       - name: build
         run: npm run build
 
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v3
-
-        id: semantic
-        with:
-          semantic_version: 18
-          extra_plugins: |
-            @semantic-release/changelog@6
-            @semantic-release/git@10
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_PAT }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: test
+        run: node test.js
