--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+build
+src
 # Created by https://www.toptal.com/developers/gitignore/api/node,macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,macos,windows
 
