--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "List of common names and nicknames to be used in a meilisearch username index as a synonym list",
   "main": "build/index.js",
-  "module": "build/index.es.js",
-  "jsnext:main": "build/index.es.js",
+  "module": "build/index.es.mjs",
+  "jsnext:main": "build/index.es.mjs",
   "scripts": {
-    "build": "node build.js; rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build.mjs; rollup -c",
+    "test": "node test.js; node test.mjs",
     "format": "prettier --write .",
     "pre-commit": "lint-staged",
     "commit": "git add . && npm run pre-commit && git add . && cz --no-verify",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -d --noEmit"
   },
   "files": [
     "build"
@@ -35,6 +35,9 @@
     "url": "https://github.com/atlas-bi/meilisearch-name-synonyms/issues"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@semantic-release/changelog": "6.0.2",
     "@semantic-release/commit-analyzer": "9.0.2",
     "@semantic-release/exec": "6.0.3",
@@ -51,10 +54,7 @@
     "lint-staged": "13.1.0",
     "prettier": "^2.8.4",
     "rollup": "^3.19.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-typescript": "^1.0.1",
     "semantic-release": "19.0.5",
     "typescript": "^4.9.5"
   },
@@ -67,6 +67,5 @@
     "**/*.{ts,css,less,scss,js,json,md,yaml,html}": [
       "npm run format"
     ]
-  },
-  "type": "module"
+  }
 }
