--- a/package.json
+++ b/package.json
@@ -42,18 +42,18 @@
     "@semantic-release/commit-analyzer": "10.0.4",
     "@semantic-release/exec": "6.0.3",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "9.0.4",
+    "@semantic-release/github": "^9.0.5",
     "@semantic-release/npm": "10.0.5",
     "@semantic-release/release-notes-generator": "11.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^8.35.0",
+    "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "lint-staged": "14.0.1",
     "prettier": "^3.0.0",
-    "rollup": "^3.19.0",
+    "rollup": "^3.29.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "semantic-release": "21.1.1",
     "typescript": "^5.0.0"
